# revenue-quality-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py  schemas.py
app/api/: __init__.py  routes.py  security.py
app/core/: __init__.py  constants.py  normalize.py
app/detection/: __init__.py  anomalies.py  classifier.py  parser.py  pipeline.py  scoring.py
data/: sample_hawk_tech.csv
frontend/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  format.ts  index.css  theme.ts  types.ts
frontend/src/components/: AnomaliesGrid.tsx  CounterpartiesChart.tsx  Dashboard.tsx  InflowDonut.tsx  MonthlyInflowChart.tsx  Recommendation.tsx  ScoreGauge.tsx  ScorePenalties.tsx  StatCards.tsx  UploadForm.tsx
tests/: conftest.py  test_anomalies.py  test_api.py  test_classifier.py  test_parser.py  test_scoring.py
